cloud_setup/object_storage/template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
